--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>Markdown Previewer</title>
-        <link rel='icon' type='image/png' href='./favicon.png'/>
-<<<<<<< HEAD
-        <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
-=======
->>>>>>> 38c3d0224f2401377568e167b3dc29fb18e80d7d
-    </head>
 
-    <body>
-        <div id="app"></div>
-        <script src="./bundle.js"></script>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Markdown Previewer</title>
+  <link rel='icon' type='image/png' href='./favicon.png' />
+  <!--<script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>-->
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="../src/app.js"></script>
+</body>
+
 </html>
